apps/scrapychat/env/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scrapychat-route
spec:
  hostnames:
    - 'scrapychat.hridaya.tech'
    - 'www.scrapychat.hridaya.tech'
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth/
      backendRefs:
        - name: scrapychat-auth-service
          port: 3001

    - matches:
        - path:
            type: PathPrefix
            value: /api/api-keys/
      backendRefs:
        - name: scrapychat-auth-service
          port: 3001

    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - name: scrapychat-backend-service
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: scrapychat-web-service
          port: 3000
